# tf-compiladores

./: LICENSE  README.md  pyproject.toml  requirements.txt
meme/: __main__.py  grammar.lark  parser.py  runtime.py  symbol.py
